mlflow/server/js/src/components/ExperimentView.css
.ExperimentView input[type=checkbox] {
  width: auto;
}

.ExperimentView th {
  background-color: #fafafa;
  color: #888888;
  font-weight: 500;
}

.ExperimentView td, .ExperimentView th {
  /* border-top: 1px solid #e2e2e2; */
  /* border-bottom: 1px solid #e2e2e2; */
}

.ExperimentView .top-row {
  text-align: center;
  border-bottom: none;
  border-top: none;
}

.ExperimentView .bottom-row {
  text-align: left;
  border-top: none;
}

.ExperimentView .left-border {
  border-left: 1px solid #e2e2e2;
}

.ExperimentView-run-buttons .btn {
  margin-left: 16px;
}

.ExperimentView-run-buttons .run-count {
  font-size: 14px;
  color: #888888;
}

.ExperimentView-evenRow {
  background-color: #bbbbbb;
}

.ExperimentView-evenRow:hover {
  background-color: #acacac;
}

.ExperimentView-oddRow:hover {
  background-color: #e1e1e1;
}

.ExperimentView-downloadCsv {
  float: right;
}

.ExperimentView-search-controls {
  margin-top: 30px;
}

.ExperimentView-run-buttons{
  margin-top: 30px;
  margin-bottom: 16px;
}

.ExperimentView-paramKeyFilter, .ExperimentView-metricKeyFilter {
  display: inline-block;
  width: 50%;
  min-width: 210px;
  margin-top: 16px;
}

.ExperimentView-search {
  display: table;
  width: 100%;
}

.ExperimentView-search-input {
  display: table-cell;
  width: auto;
}

.ExperimentView-lifecycle-input {
  display: table-cell;
  width: 100px;
}

.ExperimentView-lifecycle-button {
  width: 100px;
}

.ExperimentView-paramKeyFilter, .ExperimentView-metricKeyFilter, .ExperimentView-search-input, .ExperimentView-lifecycle-input {
  padding-right: 16px;
}

.ExperimentView-search-buttons {
  float: right;
  width: 100px;
}

.ExperimentView-search-buttons .btn {
  display: block;
  width: 100%;
  margin-bottom: 12px;
}

.ExperimentView-search-inputs {
  margin-right: 104px;
}

.ExperimentView-search-controls .filter-label {
  width: 110px;
  float: left;
  margin-top: 6px;
}

.ExperimentView-search-controls .filter-wrapper {
  margin-left: 110px;
}

.ExperimentView-search-controls input {
  width: 100%;
}

.search-button {
  margin-right: 30px;
}

div.error-message {
  margin-left: 100px;
  /*width: auto;*/
}
span.error-message {
  color: red;
}

.metric-filler-bg {
  position: relative;
  background-color: #f7f7f7;
  width: 50px;
  display: inline-block;
}

.metric-filler-fg {
  background-color: #def1ff;
  position: absolute;
  top: -1px;
  height: 22px;
  display: inline-block;
}

.metric-text {
  position: relative;
}

.ExperimentView .sortable {
  white-space: nowrap;
  cursor: pointer;

  /* Prevent double click text select */
  -webkit-user-select: none; /* Safari */
   -khtml-user-select: none; /* Konqueror HTML */
     -moz-user-select: none; /* Firefox */
      -ms-user-select: none; /* Internet Explorer/Edge */
          user-select: none;
}

.ExperimentView .metric-param-sort-toggle {
  color: #888;
  cursor: pointer;
}

.ExperimentView .metric-param-name {
  font-weight: bold;
}

.ExperimentView .underline-on-hover:hover {
  text-decoration: underline;
}

.ExperimentView .metric-param-value {
  margin-left: 4px;
}

.ExperimentView .highlighted {
  border-radius: 5px;
  background-color: rgba(255, 242, 172, 0.5);
  color: black;
}

/** Container with a max width & text-truncation for use in the experiment runs table */
.ExperimentView .run-table-container {
  max-width: 240px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  vertical-align: top;
  height: 100%;
}

.ExperimentView .metric-param-container-cell {
  min-width: 280px;
}

.ExperimentView .metric-param-cell {
  /* display: inline-block;*/
  width: 250px;
  padding: 4px;
}

.ExperimentView .metric-param-content {
  /*padding: 4px;*/
  padding-top: 0px;
}

.ExperimentView-expander:hover {
  cursor: pointer;
}

.ExperimentView .ReactVirtualized__Table__headerRow {
  overflow: visible;
  text-transform: inherit;
  font-weight: inherit;
}

/* Workaround as per https://github.com/bvaughn/react-virtualized/issues/876#issuecomment-367029529 */
.ReactVirtualized__Table__rowColumn {
  overflow: visible !important;
}

.ReactVirtualized__Table__headerColumn {
  color: rgb(136, 136, 136);
}

.ReactVirtualized__Table .run-table-container {
  padding: 8px;
}

.ReactVirtualized__Table  .BaggedCell .run-table-container {
  padding: 4px;
}

